force-app/main/default/objects/AAO_Claim__c/AAO_Claim__c.object-meta.xml
<CustomObject>
    <description>One establishment, from one piece of evidence, never edited. Replaying claims in evidence-occurred order must reconstruct every answer exactly.</description>
    <label>AAO Claim</label>
    <nameField>
        <displayFormat>CLM-{00000000}</displayFormat>
        <label>AAO Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>