force-app/main/default/objects/AAO_Claim__c/fields/AAO_Account__c.field-meta.xml
<CustomField>
    <fullName>AAO_Account__c</fullName>
    <description>Written by: Commit. Read by: Key two. Opens every account-grain question.</description>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>AAO_Claims</relationshipName>
    <relationshipLabel>AAO Claims</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>