force-app/main/default/objects/AAO_Claim__c/fields/AAO_Actor__c.field-meta.xml
<CustomField>
    <fullName>AAO_Actor__c</fullName>
    <description>Written by: Commit. Read by: Machine only with a charter stamp.</description>
    <label>Actor</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MACHINE</fullName>
            </value>
            <value>
                <fullName>HUMAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>