force-app/main/default/objects/AAO_Claim__c/fields/AAO_Answer__c.field-meta.xml
<CustomField>
    <fullName>AAO_Answer__c</fullName>
    <description>Written by: Commit. Read by: Which answer this moved. Claims relate to each other by sharing this. No claim-to-claim parentage.</description>
    <label>Answer</label>
    <type>Lookup</type>
    <referenceTo>AAO_Answer__c</referenceTo>
    <relationshipName>AAO_Claims</relationshipName>
    <relationshipLabel>AAO Claims</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>