force-app/main/default/objects/AAO_Claim__c/fields/AAO_Basis__c.field-meta.xml
<CustomField>
    <fullName>AAO_Basis__c</fullName>
    <description>Written by: Commit. Read by: Where the support came from. A basis of state alone still requires the row be named and its value quoted, via AAO_Claim_Basis__c.</description>
    <label>Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>