force-app/main/default/objects/AAO_Claim__c/fields/AAO_Candidate__c.field-meta.xml
<CustomField>
    <fullName>AAO_Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Commit. Read by: The proposal this came from, with its stage, outcome and reasons.</description>
    <label>Candidate</label>
    <referenceTo>AAO_Candidate__c</referenceTo>
    <relationshipLabel>AAO Claims</relationshipLabel>
    <relationshipName>AAO_Claims</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>