force-app/main/default/objects/AAO_Claim__c/fields/AAO_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter__c</fullName>
    <description>Written by: Commit. Read by: Which rules produced it.</description>
    <label>Charter</label>
    <type>Text</type>
    <length>80</length>
</CustomField>