force-app/main/default/objects/AAO_Claim__c/fields/AAO_Element_Coverage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Element_Coverage__c</fullName>
    <description>SUPERSEDED by AAO_Element_Completeness__c at the sixty-ninth stamp, which carries the same meaning under a word that does not collide with the vendor&apos;s. RETIRED IN PLACE AND NOT DELETED: deleting a field destroys its data, and this one holds the completeness record of every establishment made before the rename. Nothing writes it and nothing reads it from that stamp onward. It is history.</description>
    <label>Element Coverage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>