force-app/main/default/objects/AAO_Claim__c/fields/AAO_Evidence_Occurred__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Occurred__c</fullName>
    <description>Immutable. Written by: Commit, from the Source. Read by: Clock one. Replay orders on this. Without it a backfilled 2024 transcript collapses onto today and the trend is worthless.</description>
    <label>Evidence Occurred</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>