force-app/main/default/objects/AAO_Claim__c/fields/AAO_External_Person__c.field-meta.xml
<CustomField>
    <fullName>AAO_External_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Commit. Read by: Key three.</description>
    <label>External Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAO Claim External People</relationshipLabel>
    <relationshipName>AAO_Claim_External_People</relationshipName>
    <type>Lookup</type>
</CustomField>