force-app/main/default/objects/AAO_Claim__c/fields/AAO_Internal_Person__c.field-meta.xml
<CustomField>
    <fullName>AAO_Internal_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Commit, resolved from participants rather than assumed from the deal owner. Read by: Key four. Opens the seller-to-buyer grain, which is where relationship standing lives. A grain not recorded cannot be declared later without reprocessing the corpus.</description>
    <label>Internal Person</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAO Claim Internal People</relationshipLabel>
    <relationshipName>AAO_Claim_Internal_People</relationshipName>
    <type>Lookup</type>
</CustomField>