force-app/main/default/objects/AAO_Claim__c/fields/AAO_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>AAO_Interpretation__c</fullName>
    <description>Written by: Commit. Read by: The interpretation used, frozen at the moment it was used.</description>
    <label>Interpretation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>