force-app/main/default/objects/AAO_Claim__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Commit. Read by: Key one of four.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AAO Claims</relationshipLabel>
    <relationshipName>AAO_Claims</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>