force-app/main/default/objects/AAO_Claim__c/fields/AAO_Outcome__c.field-meta.xml
<CustomField>
    <fullName>AAO_Outcome__c</fullName>
    <description>Written by: Commit. Read by: Reinforcement writes a claim without moving the answer, which is what makes how often has this been pressed countable. Corroborated is the same shape for a claim whose spans intersect one already standing on the answer within the same Source (eightieth stamp): it stands as evidence and moves nothing, and it is deliberately NOT Reinforced, because two reads finding one utterance is not the buyer saying it twice.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Established</fullName>
            </value>
            <value>
                <fullName>Reinforced</fullName>
            </value>
            <value>
                <fullName>Corroborated</fullName>
            </value>
            <value>
                <fullName>Downgraded</fullName>
            </value>
            <value>
                <fullName>Demoted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>