force-app/main/default/objects/AAO_Claim__c/fields/AAO_Recorded_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Recorded_At__c</fullName>
    <description>Immutable. Written by: Commit. Read by: Clock two. When we processed it.</description>
    <label>Recorded At</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>