force-app/main/default/objects/AAO_Claim__c/fields/AAO_Retired_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Retired_At__c</fullName>
    <description>When the retirement happened. A third clock beside evidence-occurred and recorded-at: the claim&apos;s two clocks say when the words were spoken and when we processed them, and neither can say when we decided the establishment was wrong.</description>
    <label>Retired At</label>
    <type>DateTime</type>
</CustomField>