force-app/main/default/objects/AAO_Claim__c/fields/AAO_Retired_Because__c.field-meta.xml
<CustomField>
    <fullName>AAO_Retired_Because__c</fullName>
    <description>Why this claim was retired, required at retirement and never blank. A retirement with no stated reason is indistinguishable from a deletion that happened to leave a row behind, and the whole point of retiring rather than deleting is that somebody later can read what we got wrong and why we decided so.</description>
    <label>Retired Because</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>