force-app/main/default/objects/AAO_Claim__c/fields/AAO_Retrospective__c.field-meta.xml
<CustomField>
    <fullName>AAO_Retrospective__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by: Commit. Read by: Marks a record constructed from history, so nothing downstream reads a map built last Tuesday as evidence of what a seller knew in 2024.</description>
    <label>Retrospective</label>
    <type>Checkbox</type>
</CustomField>