force-app/main/default/objects/AAO_Claim__c/fields/AAO_Rubric_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Rubric_Version__c</fullName>
    <description>Written by: Commit. Read by: Which rules produced it.</description>
    <label>Rubric Version</label>
    <type>Text</type>
    <length>20</length>
</CustomField>