force-app/main/default/objects/AAO_Claim__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Commit. Read by: The evidence. Singular and correct. Optional since 47 (1 Aug 2026). Which evidence, WHEN THE EVIDENCE IS AN ARTIFACT. A state-derived row has no Source and the evidence-family law in the trigger requires it to be null. Not-required here means the law lives in one place instead of two, and the one place can say why.</description>
    <label>Source</label>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipLabel>AAO Claims</relationshipLabel>
    <relationshipName>AAO_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>