force-app/main/default/objects/AAO_Claim__c/fields/AAO_Spans__c.field-meta.xml
<CustomField>
    <fullName>AAO_Spans__c</fullName>
    <description>JSON, each with source ref, part index and locator. Frozen. Written by: Commit. Read by: This claim quotes.</description>
    <label>Spans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>