force-app/main/default/objects/AAO_Claim__c/fields/AAO_Subject_Contact__c.field-meta.xml
<CustomField>
    <fullName>AAO_Subject_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Commit. Read by: Subject identity, composed by the same frozen function as Answer.</description>
    <label>Subject Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAO Claim Subjects</relationshipLabel>
    <relationshipName>AAO_Claim_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>