force-app/main/default/objects/AAO_Claim__c/fields/AAO_Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>AAO_Subject_Type__c</fullName>
    <description>Written by: Commit. Read by: Subject identity, composed by the same frozen function as Answer. Without it replay cannot reconstruct the mirror.</description>
    <label>Subject Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Shadow_Person</fullName>
            </value>
            <value>
                <fullName>Insight_Card</fullName>
            </value>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Decision_Criterion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>