force-app/main/default/objects/AAO_Claim__c/fields/AAO_Verdict_After__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verdict_After__c</fullName>
    <description>Written by: Commit. Read by: What it became. The two together are the change the journal always carried.</description>
    <label>Verdict After</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>UNVERIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>