force-app/main/default/objects/AAO_Claim__c/fields/AAO_Verdict_Before__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verdict_Before__c</fullName>
    <description>Written by: Commit. Read by: What the answer was. Null where this claim created it.</description>
    <label>Verdict Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>UNVERIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>